--- a/CSS/index.css
+++ b/CSS/index.css
@@ -47,9 +47,9 @@ border-top:15px solid rgba(53,59,64,1) ;
     } 
 
 }
-.wholepage{
-    display: none;
-}
+/*.wholepage{
+    display: /none;
+}*/
 
 p{font-family: 'Montserrat', sans-serif;
     Font-size: 16px;} 
